--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+.animate-scroll {
+  animation: scroll 35s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
