--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,20 +126,20 @@ html {
 }
 
 .animate-scroll {
-  animation: scroll 10s linear infinite;
+  animation: scroll 70s linear infinite;
+  display: flex;
+  width: max-content;
 }
 
 @media (min-width: 640px) {
-  /* Tailwind's sm breakpoint */
   .animate-scroll {
-    animation: scroll 25s linear infinite;
+    animation: scroll 100s linear infinite;
   }
 }
 
 @media (min-width: 1024px) {
-  /* Tailwind's lg breakpoint */
   .animate-scroll {
-    animation: scroll 35s linear infinite;
+    animation: scroll 150s linear infinite;
   }
 }
 
@@ -148,6 +148,6 @@ html {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-75%);
   }
 }
